[package]
name = "ball_bouncer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy-inspector-egui = "0.36"
bevy_rapier2d = "0.33"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
