[package]
name = "ball_bouncer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
avian2d = "0.6"
bevy_remote = { version = "0.18.1", optional = true }

[features]
inspector = ["dep:bevy_remote"]

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
opt-level = 's'
strip = "debuginfo"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"